--- a/wiki-be/encyclopedia/data_analytics/Sisaweb/mapping_sao_jose_geospacial.ipynb
+++ b/wiki-be/encyclopedia/data_analytics/Sisaweb/mapping_sao_jose_geospacial.ipynb
@@ -174,6 +174,98 @@
     "ax.set_title('Proporção de Imóveis Trabalhados (Dados de 3 Semanas)')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Mime type rendering requires nbformat>=4.2.0 but it is not installed",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 76\u001b[0m\n\u001b[0;32m     73\u001b[0m     fig\u001b[38;5;241m.\u001b[39mshow()\n\u001b[0;32m     75\u001b[0m \u001b[38;5;66;03m# Passo 8: Criar o mapa de calor para imóveis não trabalhados\u001b[39;00m\n\u001b[1;32m---> 76\u001b[0m \u001b[43mplot_choropleth_map\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     77\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgdf\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     78\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mnao_trabalhados_ratio\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     79\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mProporção de Imóveis Não Trabalhados\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     80\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mBlues\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\n\u001b[0;32m     81\u001b[0m \u001b[43m)\u001b[49m\n\u001b[0;32m     83\u001b[0m \u001b[38;5;66;03m# Passo 9: Criar o mapa de calor para incidência de Aedes aegypti\u001b[39;00m\n\u001b[0;32m     84\u001b[0m plot_choropleth_map(\n\u001b[0;32m     85\u001b[0m     gdf,\n\u001b[0;32m     86\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mincidencia_aedes\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     87\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIncidência de Aedes aegypti por 1000 Imóveis Trabalhados\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     88\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mReds\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     89\u001b[0m )\n",
+      "Cell \u001b[1;32mIn[10], line 73\u001b[0m, in \u001b[0;36mplot_choropleth_map\u001b[1;34m(gdf, column, title, color_scale)\u001b[0m\n\u001b[0;32m     52\u001b[0m fig \u001b[38;5;241m=\u001b[39m px\u001b[38;5;241m.\u001b[39mchoropleth_mapbox(\n\u001b[0;32m     53\u001b[0m     gdf,\n\u001b[0;32m     54\u001b[0m     geojson\u001b[38;5;241m=\u001b[39mgdf_json,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     67\u001b[0m     }\n\u001b[0;32m     68\u001b[0m )\n\u001b[0;32m     69\u001b[0m fig\u001b[38;5;241m.\u001b[39mupdate_layout(\n\u001b[0;32m     70\u001b[0m     title_text\u001b[38;5;241m=\u001b[39mtitle \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m (Dados de 3 Semanas)\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     71\u001b[0m     margin\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mt\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m30\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ml\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m0\u001b[39m}\n\u001b[0;32m     72\u001b[0m )\n\u001b[1;32m---> 73\u001b[0m \u001b[43mfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshow\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\celso\\Desktop\\WIKI_DENGUE\\lab-soft-wiki\\venv\\lib\\site-packages\\plotly\\basedatatypes.py:3410\u001b[0m, in \u001b[0;36mBaseFigure.show\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   3377\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   3378\u001b[0m \u001b[38;5;124;03mShow a figure using either the default renderer(s) or the renderer(s)\u001b[39;00m\n\u001b[0;32m   3379\u001b[0m \u001b[38;5;124;03mspecified by the renderer argument\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   3406\u001b[0m \u001b[38;5;124;03mNone\u001b[39;00m\n\u001b[0;32m   3407\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   3408\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mplotly\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mio\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpio\u001b[39;00m\n\u001b[1;32m-> 3410\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m pio\u001b[38;5;241m.\u001b[39mshow(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32mc:\\Users\\celso\\Desktop\\WIKI_DENGUE\\lab-soft-wiki\\venv\\lib\\site-packages\\plotly\\io\\_renderers.py:394\u001b[0m, in \u001b[0;36mshow\u001b[1;34m(fig, renderer, validate, **kwargs)\u001b[0m\n\u001b[0;32m    389\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    390\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMime type rendering requires ipython but it is not installed\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    391\u001b[0m         )\n\u001b[0;32m    393\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m nbformat \u001b[38;5;129;01mor\u001b[39;00m Version(nbformat\u001b[38;5;241m.\u001b[39m__version__) \u001b[38;5;241m<\u001b[39m Version(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m4.2.0\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m--> 394\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    395\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMime type rendering requires nbformat>=4.2.0 but it is not installed\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    396\u001b[0m         )\n\u001b[0;32m    398\u001b[0m     ipython_display\u001b[38;5;241m.\u001b[39mdisplay(bundle, raw\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m    400\u001b[0m \u001b[38;5;66;03m# external renderers\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: Mime type rendering requires nbformat>=4.2.0 but it is not installed"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import geopandas as gpd\n",
+    "from shapely import wkt\n",
+    "import plotly.express as px\n",
+    "import shapely.geometry\n",
+    "\n",
+    "# ... (restante do código permanece o mesmo)\n",
+    "\n",
+    "# Função para criar mapas coropléticos interativos\n",
+    "def plot_choropleth_map(gdf, column, title, color_scale):\n",
+    "    # Reprojetar para um CRS projetado para calcular centroides corretamente\n",
+    "    gdf_projected = gdf.to_crs(epsg=3857)\n",
+    "    centroid = gdf_projected.geometry.centroid\n",
+    "    mean_x = centroid.x.mean()\n",
+    "    mean_y = centroid.y.mean()\n",
+    "    # Converter o ponto central de volta para EPSG:4326\n",
+    "    center_point = gpd.GeoSeries([shapely.geometry.Point(mean_x, mean_y)], crs=3857).to_crs(epsg=4326)\n",
+    "    center_lat = center_point.geometry.y.values[0]\n",
+    "    center_lon = center_point.geometry.x.values[0]\n",
+    "    \n",
+    "    fig = px.choropleth_mapbox(\n",
+    "        gdf,\n",
+    "        geojson=gdf_json,\n",
+    "        locations='id',\n",
+    "        color=column,\n",
+    "        color_continuous_scale=color_scale,\n",
+    "        mapbox_style=\"carto-positron\",\n",
+    "        zoom=10,\n",
+    "        center={\"lat\": center_lat, \"lon\": center_lon},\n",
+    "        opacity=0.5,\n",
+    "        labels={column: title},\n",
+    "        hover_data={\n",
+    "            'tratamento_imoveis': ':.2f',\n",
+    "            'incidencia_aedes': ':.2f',\n",
+    "            'nao_trabalhados_ratio': ':.2f'\n",
+    "        }\n",
+    "    )\n",
+    "    fig.update_layout(\n",
+    "        title_text=title + ' (Dados de 3 Semanas)',\n",
+    "        margin={\"r\": 0, \"t\": 30, \"l\": 0, \"b\": 0}\n",
+    "    )\n",
+    "    # Salvar a figura como arquivo HTML\n",
+    "    output_html = f\"{title.replace(' ', '_').lower()}.html\"\n",
+    "    fig.write_html(output_html, include_plotlyjs='cdn')\n",
+    "    print(f\"Mapa salvo como {output_html}\")\n",
+    "\n",
+    "# Passo 8: Criar o mapa de calor para imóveis não trabalhados\n",
+    "plot_choropleth_map(\n",
+    "    gdf,\n",
+    "    'nao_trabalhados_ratio',\n",
+    "    'Proporção de Imóveis Não Trabalhados',\n",
+    "    'Blues'\n",
+    ")\n",
+    "\n",
+    "# Passo 9: Criar o mapa de calor para incidência de Aedes aegypti\n",
+    "plot_choropleth_map(\n",
+    "    gdf,\n",
+    "    'incidencia_aedes',\n",
+    "    'Incidência de Aedes aegypti por 1000 Imóveis Trabalhados',\n",
+    "    'Reds'\n",
+    ")\n",
+    "\n",
+    "# Passo 10: Criar o mapa de calor para imóveis trabalhados\n",
+    "plot_choropleth_map(\n",
+    "    gdf,\n",
+    "    'tratamento_imoveis',\n",
+    "    'Proporção de Imóveis Trabalhados',\n",
+    "    'OrRd'\n",
+    ")\n"
+   ]
   }
  ],
  "metadata": {
